--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,7 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Climate+Crisis&display=swap" rel="stylesheet">
 <div class="jumbotron">
     <h1>Hong Kong University</h1>
 </div>
@@ -9,19 +11,16 @@
     <div class="col-md-4">
         <h2>Welcome to Hong Kong University</h2>
         <p>
-            Hong Kong University is a sample application that
-            demonstrates how to use Entity Framework Core in an
-            ASP.NET Core MVC web application.
+            Hong Kong University is a place for students to flourish and grow.
         </p>
     </div>
-    <div class="col-md-4">
-        <h2>Build it from scratch</h2>
-        <p>You can build the application by following the steps in a series of tutorials.</p>
-        <p><a class="btn btn-default" href="https://docs.asp.net/en/latest/data/ef-mvc/intro.html">See the tutorial &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Download it</h2>
-        <p>You can download the completed project from GitHub.</p>
-        <p><a class="btn btn-default" href="https://github.com/dotnet/AspNetCore.Docs/tree/main/aspnetcore/data/ef-mvc/intro/samples/5cu-final">See project source code &raquo;</a></p>
+    <div>
+        <img src="https://mcdonnell.wustl.edu/wp-content/uploads/2020/10/UHK-460x310.jpg" width="400px" />
     </div>
 </div>
+
+<style>
+    h1 {
+        font-family: 'Climate Crisis', cursive;
+    }
+</style>
